deployment/k8s/pgadmin/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pgadmin-ingress
  annotations:
    nginx.ingress.kubernetes.io/server-alias: "pgadmin.local.ii.coop, pgadmin.local.ii.nz, pgadmin.local.sharing.io"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - PgAdmin'
    # nginx.ingress.kubernetes.io/app-root: /pgadmin
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   proxy_set_header X-Script-Name "/pgadmin";
    #   proxy_set_header X-Scheme $scheme;
    #   # proxy_set_header Host $host;
  # annotations:
  #   nginx.ingress.kubernetes.io/app-root: /
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: pgadmin.localho.st
    http:
      # required PGADMIN_CONFIG_SERVER_MODE env set to False in deployment
      # We need to template this out
      paths:
      # - path: /pgadmin(/|$)(.*)
      - path: /
      # required SCRIPT_NAME env in deployment
      # - path: /pgadmin
        backend:
          serviceName: pgadmin
          servicePort: 80
